--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_install:
   - source activate gds
 
 script: 
-  - jupyter nbconvert --to python check_gds_stack.ipynb --output test.py
+  - jupyter nbconvert --to script check_gds_stack.ipynb --output test.py
+  - cat test.py
   - python2 test.py
 
 notifications:
