--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - source activate gds
 
 script: 
-  - jupyter nbconvert --to notebook --execute --allow-errors check_gds_stack.ipynb --stdout
+  - jupyter nbconvert --to markdown --execute --allow-errors check_gds_stack.ipynb --stdout
 
 notifications:
     email:
