--- a/install_gds_stack.yml
+++ b/install_gds_stack.yml
@@ -3,27 +3,27 @@ name: gds
 channels:
   - conda-forge
 dependencies:
-  - bokeh
-  - cartopy
-  - clusterpy
-  - dask
-  - geopandas
-  - ipython=5.0
-  - ipywidgets
-  - jupyter=1.*
+ #- bokeh
+ #- cartopy
+ #- clusterpy
+ #- dask
+ #- geopandas
+ #- ipython=5.0
+ #- ipywidgets
+ #- jupyter=1.*
   - matplotlib
-  - mplleaflet
-  - networkx
-  - palettable
-  - pandas
-  - pip
-  - qgrid
-  - rasterio
-  - scikit-learn
+ #- mplleaflet
+ #- networkx
+ #- palettable
+ #- pandas
+ #- pip
+ #- qgrid
+ #- rasterio
+ #- scikit-learn
   - scipy
-  - seaborn
-  - statsmodels
-  - xlrd
-  - xlsxwriter
+ #- seaborn
+ #- statsmodels
+ #- xlrd
+ #- xlsxwriter
 
 
