--- a/install_gds_stack.yml
+++ b/install_gds_stack.yml
@@ -11,7 +11,6 @@ dependencies:
   - ipython=5.0
   - ipywidgets
   - jupyter=1.*
-  - matplotlib
  #- mplleaflet
  #- networkx
  #- palettable
@@ -20,7 +19,7 @@ dependencies:
  #- qgrid
  #- rasterio
  #- scikit-learn
- #- seaborn
+  - seaborn
  #- statsmodels
  #- xlrd
  #- xlsxwriter
