--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,10 @@ before_install:
 script: 
   - jupyter nbconvert --to markdown --execute --allow-errors check_gds_stack.ipynb --stdout
   - jupyter nbconvert --to markdown --execute check_gds_stack.ipynb --stdout
-  - python -c 'import numpy; print(numpy.__version__)'
-  - python -c 'import pandas; print(pandas.__version__)'
+  - python -c 'import numpy; print(numpy.__version__);print(numpy)'
+  - python -c 'import pandas; print(pandas.__version__);print(pandas)'
+  - python -c 'import pysal; print(pysal.__version__);print(pysal)'
+  - python -c 'import geopandas; print(geopandas.__version__);print(geopandas)'
 
 notifications:
     email:
