Adding contextily and updating check notebook

--- a/install_gds_stack.yml
+++ b/install_gds_stack.yml
@@ -1,8 +1,10 @@
 # Run `conda-env create -f install_gds_stack.yml`
-name: gds
+name: gds_test
 channels:
   - conda-forge
 dependencies:
+  - python=2.7
+  - pip
   - bokeh
   - cartopy
   - clusterpy
@@ -14,8 +16,9 @@ dependencies:
   - mplleaflet
   - networkx
   - palettable
-  - pip
-  - python=2.7
+  - PIL
+  - pip:
+      contextily
   - qgrid
   - rasterio
   - scikit-learn
