--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,13 @@ before_install:
   - conda update --yes conda
   - conda install --yes psutil
   - conda-env create -f install_gds_stack.yml
-  - source activate gds
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda create -n gds_fixed -f gds_requirements_linux; fi
 
 script: 
-  - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 --allow-errors check_gds_stack.ipynb --stdout
+  - source activate gds
+    #- jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 --allow-errors check_gds_stack.ipynb --stdout
+  - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 check_gds_stack.ipynb
+  - source activate gds_fixed
   - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 check_gds_stack.ipynb
 
 notifications:
