--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - conda update --yes conda
   - conda install --yes psutil
   - conda-env create -f install_gds_stack.yml
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda create -n gds_fixed -f gds_requirements_linux.txt; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda create --name gds_fixed --file gds_requirements_linux.txt; fi
 
 script: 
   - source activate gds_test
