--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,9 +15,10 @@ install:
   - conda update -q conda
   - conda info -a
   - "conda-env create -f install_gds_stack.yml"
-  - activate gds
 
 test_script:
+  - activate gds
   - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 --allow-errors check_gds_stack.ipynb --stdout
   - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 check_gds_stack.ipynb
+  - conda list --explicit
 
