--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,4 +21,5 @@ test_script:
   - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 --allow-errors check_gds_stack.ipynb --stdout
   - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 check_gds_stack.ipynb
   - conda list --explicit
+  - conda info -e
 
