--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,11 +19,14 @@ install:
   - conda update -q conda
   - conda info -a
   - "conda-env create -f install_gds_stack.yml"
+  - conda create --name gds_fixed --file gds_requirements_win-%PYTHON_ARCH$.txt
+  - activate gds_fixed
+  - pip install contextily
 
 test_script:
   - activate gds_test
-  - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 --allow-errors check_gds_stack.ipynb --stdout
+    #- jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 --allow-errors check_gds_stack.ipynb --stdout
   - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 check_gds_stack.ipynb
-  - conda list --explicit
-  - conda info -e
+  - activate gds_fixed
+  - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 check_gds_stack.ipynb
 
