--- a/install_gds_stack.yml
+++ b/install_gds_stack.yml
@@ -1,7 +1,7 @@
 # Run `conda-env create -f install_gds_stack.yml`
 name: gds_test
 channels:
-  - ioos
+  - defaults
   - conda-forge
 dependencies:
   - python=2.7
