--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,13 @@ before_install:
   - conda install --yes psutil
   - conda-env create -f install_gds_stack.yml
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda create --name gds_fixed --file gds_requirements_linux-64.txt; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda create --name gds_fixed --file gds_requirements_osx-64.txt; fi
   - source activate gds_fixed
   - pip install contextily
 
 script: 
   - source activate gds_test
-  - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 --allow-errors check_gds_stack.ipynb --stdout
+    #- jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 --allow-errors check_gds_stack.ipynb --stdout
   - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=120 check_gds_stack.ipynb
     #- conda list --explicit
   - source activate gds_fixed
