--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - conda install --yes psutil
   - conda-env create -f install_gds_stack.yml
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda create --name gds_fixed --file gds_requirements_linux-64.txt; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda create --name gds_fixed --file gds_requirements_osx-64.txt; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then conda create --name gds_fixed --file gds_requirements_osx-64.txt; fi
   - source activate gds_fixed
   - pip install contextily
 
