--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,18 @@ before_install:
   - conda update --yes conda
   - conda install --yes psutil
   - conda-env create -f install_gds_stack.yml
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda create --name gds_fixed --file gds_requirements_linux-64.txt; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then conda create --name gds_fixed --file gds_requirements_osx-64.txt; fi
-  - source activate gds_fixed
-  - pip install contextily
+    #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then conda create --name gds_fixed --file gds_requirements_linux-64.txt; fi
+    #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then conda create --name gds_fixed --file gds_requirements_osx-64.txt; fi
+    #- source activate gds_fixed
+    #- pip install contextily
 
 script: 
   - source activate gds_test
     #- jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=480 --allow-errors check_gds_stack.ipynb --stdout
   - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=480 check_gds_stack.ipynb
     #- conda list --explicit
-  - source activate gds_fixed
-  - jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=480 check_gds_stack.ipynb
+    #- source activate gds_fixed
+    #- jupyter nbconvert --to markdown --execute --ExecutePreprocessor.timeout=480 check_gds_stack.ipynb
 
 notifications:
     email:
