Adding more towards installing R packages after conda

--- a/gds_stack.yml
+++ b/gds_stack.yml
@@ -3,35 +3,36 @@ name: gds
 channels:
   - conda-forge
 dependencies:
-  - python=3.5
-  - pip
-  - bokeh
-  - dask
-  - feather-format
-  - geopandas
-  - ipython
-  - ipywidgets
-  - jupyter
-  - jupyterlab
-  - mkl-service
-  - networkx
-  - palettable
-  - pillow
-  - pip:
-      - pystan
-      - bambi
-  - contextily
-  - pymc3
-  - pysal
-  - rasterio
-  - scikit-learn
-  - seaborn
-  - statsmodels
-  - xlrd
-  - xlsxwriter
-  # R
+# - python=3.5
+# - pip
+# - bokeh
+# - dask
+# - feather-format
+# - geopandas
+# - ipython
+# - ipywidgets
+# - jupyter
+# - jupyterlab
+# - mkl-service
+# - networkx
+# - palettable
+# - pillow
+# - pip:
+#     - pystan
+#     - bambi
+#     - rpy2
+# - contextily
+# - pymc3
+# - pysal
+# - rasterio
+# - scikit-learn
+# - seaborn
+# - statsmodels
+# - xlrd
+# - xlsxwriter
+# # R
 # - r-arm
-# - r-base
+  - r-base
 # - r-caret
 # - r-crayon
 # - r-data.table
@@ -42,11 +43,10 @@ dependencies:
 # - r-gstat
 # - r-hexbin
 # - r-igraph
-  - r-irkernel
+# - r-irkernel
 # - r-knitr
 # - r-lme4
 # - r-nlme
-# - r-nycflights13
 # - r-plyr
 # - r-randomforest
 # - r-raster
@@ -62,4 +62,4 @@ dependencies:
 # - r-spdep
 # - r-splancs
 # - r-tidyverse
-  - rpy2
+# - rpy2
