Adding back all py libraries

--- a/gds_stack.yml
+++ b/gds_stack.yml
@@ -4,33 +4,33 @@ channels:
   - conda-forge
 dependencies:
   - python=3
-# - pip
-# - bokeh
-# - dask
-# - feather-format
-# - geopandas
-# - ipython
-# - ipywidgets
-# - jupyter
-# - jupyterlab
-# - jupyter_client
-# - mkl-service
-# - networkx
-# - osmnx
-# - palettable
-# - pillow
-# - pip:
-#     - bambi
-#     - pystan
-#     - polyline
-#     - rpy2
-# - contextily
-# - pymc3
-# - pysal
-# - rasterio
-# - scikit-learn
-# - seaborn
-# - statsmodels
-# - xlrd
-# - xlsxwriter
+  - pip
+  - bokeh
+  - dask
+  - feather-format
+  - geopandas
+  - ipython
+  - ipywidgets
+  - jupyter
+  - jupyterlab
+  - jupyter_client
+  - mkl-service
+  - networkx
+  - osmnx
+  - palettable
+  - pillow
+  - pip:
+      - bambi
+      - pystan
+      - polyline
+      - rpy2
+  - contextily
+  - pymc3
+  - pysal
+  - rasterio
+  - scikit-learn
+  - seaborn
+  - statsmodels
+  - xlrd
+  - xlsxwriter
 
