Adding notebook to test R (unfinished) and update Makefile accordingly

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .ipynb_checkpoints/
 .ipynb_checkpoints/*
 .DS_Store
-check_gds_stack.html
+check_py_stack.html
+check_r_stack.html
 us.tif
 db_test.feather
 .jupyter/
