add extra packages

--- a/gds_py/Dockerfile
+++ b/gds_py/Dockerfile
@@ -44,6 +44,8 @@ RUN conda update conda --yes \
      'urbanaccess' \
      'xlrd' \
      'xlsxwriter' \
+     'deprecated' \
+     'mkl-service' \
      && conda clean --all --yes --force-pkgs-dirs \
      && find /opt/conda/ -follow -type f -name '*.a' -delete \
      && find /opt/conda/ -follow -type f -name '*.pyc' -delete \
